# mliot-embeddedc-2026-hw

./: .gitignore
week01/: buoi01_HangTuanBao.c
week02/: answer.txt  buoi02_HangTuanBao.c
week03/: answers.txt
week04/: CMakeLists.txt  answers.txt  main.c  stm32f1xx_hal_conf.h
week04/cmake/: gcc-arm-none-eabi.cmake
